some layout fixes

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <style>
       body {
         font-family: Helvetica, Arial, sans-serif;
-        padding-left: 10vw; padding-right: 8vw; padding-top: 20vh;}
+        padding-top: 20vh;}
       h1, h2, h3, h4, h5, h6 {font-family: Helvetica, Arial, sans-serif;}
       button {margin-right: 1vh; border-radius: 200px;}
-      article {margin-right: 5vw;}
+      article {max-width: 48rem;}
       .spacer {padding-bottom: 40vh;}
       .logo {text-decoration: none;}
     </style></head>
