--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </style></head>
 
   <body><main class="container">
-    <small>Proove of concept</small>
+    <small>Proof of concept</small>
     <a class="logo" href="javascript:void(0);" onclick="location.reload();">
       <h1>Extremly simple HPLN web stack</h1></a>
 
