very small layout changes

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
         font-family: Helvetica, Arial, sans-serif;
         padding-top: 20vh;}
       h1, h2, h3, h4, h5, h6 {font-family: Helvetica, Arial, sans-serif;}
-      button {margin-right: 1vh; border-radius: 200px;}
-      article {max-width: 48rem;}
+      code {margin-left: 1em;}
+      button {padding-right: 1vh; border-radius: 200px;}
+      article {max-width: 48em;}
       .spacer {padding-bottom: 40vh;}
       .logo {text-decoration: none;}
     </style></head>
