--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HPLN</title>
+    <link rel="icon"
+      href="/icons/favicon.svg" type="image/svg+xml">
+    <link rel="icon"
+      href="/icons/favicon-32x32.png" sizes="32x32" type="image/png">
+    <link rel="icon"
+      href="/icons/favicon-512x512.png" sizes="512x512" type="image/png">
     <link rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
     <script src="https://unpkg.com/htmx.org@2.0.4"></script>
